Both challenges completed

--- a/pricing-table-2/index.html
+++ b/pricing-table-2/index.html
@@ -62,7 +62,7 @@
             <h2>Champion</h2>
             <div class="icon">👑</div>
           </div>
-          <div class="price-block">
+          <div class="price-block" style="background-color: rgba(72, 74, 48, 0.377);">
             <div class="price">₹3,999</div>
             <div class="period">monthly</div>
           </div>
